Updated some figures in Matplotlib

--- a/AppendixF/NumPy/AggregationFunctions.ipynb
+++ b/AppendixF/NumPy/AggregationFunctions.ipynb
@@ -43,7 +43,7 @@
     "print(np.max(x, axis=1))             # Max of each row\n",
     "print(np.all(x > 0))                 # Are all elements positive?\n",
     "print(np.any(x > 4, axis=1))         # Are any elements > 4 in each row?\n",
-    "print(np.cumsum(x, axis=1))          # Cumulative row sums\n",
+    "print(np.cumsum(x, axis=1))          # Cumulative sums across each row\n",
     "print(np.percentile(x, 25, axis=0))  # 25th percentile per column\n",
     "print(np.count_nonzero(x % 2 == 0))  # Count of even numbers"
    ]
@@ -184,14 +184,14 @@
    "source": [
     "x = np.array([1, 2, np.nan, 4, 5])\n",
     "\n",
-    "print(np.sum(x))      # Output: nan\n",
-    "print(np.nansum(x))   # Output: 12.0 (ignores nan)\n",
+    "print(np.sum(x))      \n",
+    "print(np.nansum(x))   \n",
     "\n",
-    "print(np.mean(x))     # Output: nan\n",
-    "print(np.nanmean(x))  # Output: 3.0\n",
+    "print(np.mean(x))     \n",
+    "print(np.nanmean(x))  \n",
     "\n",
-    "print(np.max(x))      # Output: nan\n",
-    "print(np.nanmax(x))   # Output: 5.0"
+    "print(np.max(x))      \n",
+    "print(np.nanmax(x))  "
    ]
   },
   {
