--- a/AppendixF/NumPy/ArrayManipulation.ipynb
+++ b/AppendixF/NumPy/ArrayManipulation.ipynb
@@ -35,8 +35,8 @@
    ],
    "source": [
     "x = np.array([3, 1, 4, 2, 5])\n",
-    "print(np.sort(x))  # Create a new sorted array\n",
-    "print(x)  # Original unchanged"
+    "print(np.sort(x))  # Sorted copy\n",
+    "print(x)           # Original unchanged"
    ]
   },
   {
@@ -93,19 +93,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 0 1]\n",
-      " [0 1 0]]\n",
-      "[[1 0 2]\n",
-      " [2 0 1]]\n"
+      "[70 88 95 95]\n",
+      "['Carlos' 'Alice' 'Bob' 'Dana']\n"
      ]
     }
    ],
    "source": [
-    "A = np.array([[3, 1, 4],\n",
-    "              [2, 5, 0]])\n",
+    "grades = np.array([88, 95, 70, 95])\n",
+    "names  = np.array(['Alice', 'Bob', 'Carlos', 'Dana'])\n",
     "\n",
-    "print(np.argsort(A, axis=0))  # indices to sort each column\n",
-    "print(np.argsort(A, axis=1))  # indices to sort each row"
+    "idx = np.argsort(grades)  # Indices that sort the grades (ascending)\n",
+    "print(grades[idx])\n",
+    "print(names[idx])         # Reorder names in the same way"
    ]
   },
   {
@@ -118,17 +117,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 2 3 5]\n",
-      "['b' 'd' 'c' 'a']\n"
+      "[95 95 88 70]\n",
+      "['Dana' 'Bob' 'Alice' 'Carlos']\n"
      ]
     }
    ],
    "source": [
-    "x = np.array([5, 2, 3, 2])\n",
-    "labels = np.array(['a', 'b', 'c', 'd'])  # Associate labels with each element\n",
-    "indices = np.argsort(x, kind='mergesort')\n",
-    "print(x[indices])       # Sorted values\n",
-    "print(labels[indices])  # Corresponding original labels"
+    "idx = np.argsort(grades)[::-1]\n",
+    "print(grades[idx])\n",
+    "print(names[idx])  "
    ]
   },
   {
@@ -142,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "379cbc94-1d32-46d3-ad51-0465e0693f73",
+   "id": "c648aa47-b079-483a-8cad-248508b14371",
    "metadata": {},
    "outputs": [
     {
@@ -162,21 +159,20 @@
     "a = np.array([[1, 2], [3, 4]])\n",
     "b = np.array([[5, 6]])\n",
     "\n",
-    "np.concatenate((a, b), axis=0)"
+    "np.vstack((a, b))  # Stack vertically (along rows)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c648aa47-b079-483a-8cad-248508b14371",
+   "id": "81758814-4d69-4700-8352-f89fef833145",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4],\n",
-       "       [5, 6]])"
+       "array([[1, 3],\n",
+       "       [2, 4]])"
       ]
      },
      "execution_count": 8,
@@ -185,16 +181,16 @@
     }
    ],
    "source": [
-    "a = np.array([[1, 2], [3, 4]])\n",
-    "b = np.array([[5, 6]])\n",
+    "a = np.array([[1], [2]])\n",
+    "b = np.array([[3], [4]])\n",
     "\n",
-    "np.vstack((a, b))  # Stack vertically (along rows)"
+    "np.hstack((a, b))  # Stack horizontally (along columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81758814-4d69-4700-8352-f89fef833145",
+   "id": "5e7dab8a-ece5-46d0-a4ed-db8e553da1b1",
    "metadata": {},
    "outputs": [
     {
@@ -210,16 +206,16 @@
     }
    ],
    "source": [
-    "a = np.array([[1], [2]])\n",
-    "b = np.array([[3], [4]])\n",
+    "x = np.array([1, 2])\n",
+    "y = np.array([3, 4])\n",
     "\n",
-    "np.hstack((a, b))  # Stack horizontally (along columns)"
+    "np.column_stack((x, y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "508614e7-e487-448e-8cc0-74e267a339c9",
+   "id": "1b6b37b4-8272-4449-b6b8-92cb436b86a0",
    "metadata": {},
    "outputs": [
     {
@@ -238,19 +234,21 @@
     "x = np.array([1, 2])\n",
     "y = np.array([3, 4])\n",
     "\n",
-    "np.stack((x, y), axis=1)  # Stack as columns into a 2D array"
+    "np.c_[x, y]  # Same as np.column_stack((x, y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3fb0b8f8-50bf-4756-9fb7-5e2433780311",
+   "id": "e663818c-32a7-47fc-98c8-8742ff148492",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4])"
+       "array([[ 1, 10],\n",
+       "       [ 2, 20],\n",
+       "       [ 3, 30]])"
       ]
      },
      "execution_count": 11,
@@ -259,80 +257,30 @@
     }
    ],
    "source": [
-    "np.hstack((x, y))"
+    "np.c_[1:4, [10, 20, 30]] # Combine a slice with an explicit column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e7dab8a-ece5-46d0-a4ed-db8e553da1b1",
+   "id": "379cbc94-1d32-46d3-ad51-0465e0693f73",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 3],\n",
-       "       [2, 4]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2 -1]\n"
+     ]
     }
    ],
    "source": [
-    "x = np.array([1, 2])\n",
-    "y = np.array([3, 4])\n",
+    "# Concatenate along the last axis of a 4D array\n",
+    "arr  = np.arange(2 * 2 * 2 * 3).reshape(2, 2, 2, 3) # shape (2, 2, 2, 3)\n",
+    "extra = -np.ones((2, 2, 2, 1), dtype=int)           # shape (2, 2, 2, 1)\n",
     "\n",
-    "np.column_stack((x, y))  # Stack as columns into a 2D array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1b6b37b4-8272-4449-b6b8-92cb436b86a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 3],\n",
-       "       [2, 4]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.array([1, 2])\n",
-    "y = np.array([3, 4])\n",
-    "\n",
-    "np.c_[x, y]  # Stack as columns into a 2D array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e663818c-32a7-47fc-98c8-8742ff148492",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0],\n",
-       "       [2, 0],\n",
-       "       [3, 0]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.c_[1:4, [0, 0, 0]]"
+    "combined = np.concatenate((arr, extra), axis=3)     # shape (2, 2, 2, 4)\n",
+    "print(combined[0, 0, 0, :])"
    ]
   },
   {
@@ -345,60 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "41849900-a474-4ad1-8765-cb8cec044303",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[1, 2],\n",
-       "        [5, 6]]),\n",
-       " array([[3, 4],\n",
-       "        [7, 8]])]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([[1, 2, 3, 4],\n",
-    "              [5, 6, 7, 8]])\n",
-    "\n",
-    "np.split(a, 2, axis=1)  # Split into 2 subarrays along columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "c7170bf1-d694-4905-83f2-43d61249a1bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[1, 2],\n",
-       "        [5, 6]]),\n",
-       " array([[3],\n",
-       "        [7]]),\n",
-       " array([[4],\n",
-       "        [8]])]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array_split(a, 3, axis=1)  # Uneven split into 3 subarrays along columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "27da1688-c33a-4a04-adc7-e01107eaa816",
    "metadata": {},
    "outputs": [
@@ -408,18 +303,21 @@
        "[array([[1, 2, 3, 4]]), array([[5, 6, 7, 8]])]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.vsplit(a, 2)  # Split into 2 row subarrays (along axis 0)"
+    "a = np.array([[1, 2, 3, 4],\n",
+    "              [5, 6, 7, 8]])\n",
+    "\n",
+    "np.vsplit(a, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "6b8daf4a-e072-48ba-9a00-2cf10dee3f89",
    "metadata": {},
    "outputs": [
@@ -432,13 +330,13 @@
        "        [7, 8]])]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.hsplit(a, 2)  # Split into 2 column subarrays (along axis 1)"
+    "np.hsplit(a, 2)"
    ]
   },
   {
@@ -451,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "36e49e7a-e38a-4d80-b4eb-f5aa733201d3",
    "metadata": {},
    "outputs": [
@@ -463,7 +361,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "3a55b4e7-85d4-44ff-9b73-41f277a49455",
    "metadata": {},
    "outputs": [
@@ -488,7 +386,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "b4611c8e-4f32-471d-9939-5e30440a223f",
    "metadata": {},
    "outputs": [
@@ -510,7 +408,7 @@
        "       [4]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "cc65605b-43a3-48ee-a7f5-a71c7639348d",
    "metadata": {},
    "outputs": [
@@ -539,7 +437,7 @@
        "array([1, 1, 2, 2, 3, 3])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,28 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "586e2400-5efd-48e4-81cf-c55cd7840a1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 2, 3, 3, 3])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.repeat(x, [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "7bec1e86-0332-40cf-90de-b21fbb9284fe",
    "metadata": {},
    "outputs": [
@@ -582,7 +459,7 @@
        "array([1, 2, 3, 1, 2, 3])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "499680e2-62f0-4906-9e20-6ade0b413997",
    "metadata": {},
    "outputs": [
@@ -606,7 +483,7 @@
        "       [3, 4, 3, 4, 3, 4]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,99 +503,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "fe29eee5-72c0-42b3-ad16-47e244edb4ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4],\n",
-       "       [5, 6]])"
+       "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "A = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "\n",
-    "np.reshape(a, (3, 2))"
+    "np.ravel(A)  # flatten to 1D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "e5e1ffbf-8c06-4ec9-8e9c-48e12668ae16",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[3, 2, 1],\n",
-       "       [6, 5, 4]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.flip(a, axis=1)  # Reverse columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "8afafa21-9c7a-4e0a-834b-609349a603ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4, 5, 6],\n",
-       "       [1, 2, 3]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.roll(a, shift=1, axis=0)  # Roll rows down by 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "72283060-6751-42e6-b3ce-524092a21f57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 4],\n",
-       "       [2, 5],\n",
-       "       [3, 6]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.transpose(a)  # or simply a.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "0dc89092-e9ba-4ed7-a2f4-8f7b52a7f9a8",
    "metadata": {},
    "outputs": [
@@ -735,14 +543,58 @@
        "        [1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "T = np.ones((2, 3, 4))\n",
-    "np.transpose(T, (1, 0, 2))  # Swap axes 0 and 1 "
+    "np.transpose(T, (1, 0, 2))  # Reorder axes: (0,1,2) -> (1,0,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e5e1ffbf-8c06-4ec9-8e9c-48e12668ae16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 2, 1],\n",
+       "       [6, 5, 4]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.flip(A, axis=1)  # Reverse columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8afafa21-9c7a-4e0a-834b-609349a603ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5, 6],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.roll(A, shift=1, axis=0)  # Roll rows down by 1 (circular shift)"
    ]
   },
   {
@@ -755,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "ec871914-59ee-43c1-807d-8438a2450ec1",
    "metadata": {},
    "outputs": [
@@ -765,7 +617,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "01a2bd01-4a27-4d91-b763-062148c027c2",
    "metadata": {},
    "outputs": [
@@ -787,18 +639,18 @@
        "array([[1, 2, 3]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.expand_dims(a, axis=0)  # Add new axis at position 0"
+    "np.expand_dims(a, axis=0)  # Add a new axis at position 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "ee96902f-7ac9-42ad-a668-8591808fcd1d",
    "metadata": {},
    "outputs": [
@@ -810,18 +662,18 @@
        "       [3]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[:, np.newaxis]  # Add new axis to make column vector"
+    "a[:, np.newaxis]  # Add a new axis to make a column vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "8aaa7925-7657-4c95-a674-87650af1956e",
    "metadata": {},
    "outputs": [
@@ -831,14 +683,14 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b = np.array([[[1], [2], [3]]])  # Shape (1, 3, 1)\n",
-    "np.squeeze(b)  # Squeeze axes 0 and 2"
+    "np.squeeze(b)  # Remove all singleton axes"
    ]
   },
   {
