--- a/AppendixF/NumPy/Arrays.ipynb
+++ b/AppendixF/NumPy/Arrays.ipynb
@@ -178,15 +178,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5,)\n",
-      "1\n"
+      "(5,)\n"
      ]
     }
    ],
    "source": [
     "x = np.array([1, 2, 3, 4, 5])\n",
-    "print(x.shape)   \n",
-    "print(x.ndim)"
+    "print(x.shape)"
    ]
   },
   {
@@ -198,16 +196,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3)\n",
-      "2\n"
+      "(2, 3)\n"
      ]
     }
    ],
    "source": [
     "A = np.array([[1, 2, 3],\n",
     "              [4, 5, 6]])\n",
-    "print(A.shape)\n",
-    "print(A.ndim)"
+    "print(A.shape)"
    ]
   },
   {
@@ -219,18 +215,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 2, 3)\n",
-      "3\n"
+      "(2, 2, 3)\n"
      ]
     }
    ],
    "source": [
-    "T = np.array([[[1, 2, 3],\n",
-    "               [4, 5, 6]],\n",
-    "              [[7, 8, 9],\n",
-    "               [10, 11, 12]]])\n",
-    "print(T.shape)\n",
-    "print(T.ndim)"
+    "T = np.array([[\n",
+    "                [1, 2, 3],\n",
+    "                [4, 5, 6]\n",
+    "              ],\n",
+    "              [\n",
+    "                [7, 8, 9],\n",
+    "                [10, 11, 12]\n",
+    "             ]])\n",
+    "print(T.shape)"
    ]
   },
   {
@@ -303,14 +301,14 @@
    "source": [
     "x = np.array([1, 2, 3, 4])\n",
     "print(x.shape)\n",
-    "print(x.T.shape)  # no change in shape"
+    "print(x.T.shape)  # no change"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Views and Copies"
+    "Memory Layout"
    ]
   },
   {
@@ -322,18 +320,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = [99  2  3]\n",
-      "b = [99  2  3]\n"
+      "A.shape: (2, 3), A.strides: (12, 4)\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
-    "b = np.asarray(a)   # Typically returns a view\n",
-    "b[0] = 99\n",
-    "\n",
-    "print('a =', a)\n",
-    "print('b =', b)"
+    "A = np.arange(6).reshape(2, 3)\n",
+    "print(f'A.shape: {A.shape}, A.strides: {A.strides}')"
    ]
   },
   {
@@ -345,18 +338,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = [1 2 3]\n",
-      "b = [99  2  3]\n"
+      "B.shape: (3, 2), B.strides: (4, 12)\n",
+      "A:\n",
+      " [[10  1  2]\n",
+      " [ 3  4  5]]\n",
+      "B:\n",
+      " [[10  3]\n",
+      " [ 1  4]\n",
+      " [ 2  5]]\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
-    "b = np.copy(a)   # Returns a copy\n",
-    "b[0] = 99\n",
+    "B = A.T\n",
+    "print(f'B.shape: {B.shape}, B.strides: {B.strides}')\n",
     "\n",
-    "print('a =', a)\n",
-    "print('b =', b)"
+    "A[0, 0] = 10\n",
+    "print('A:\\n', A)\n",
+    "print('B:\\n', B)  # Reflects the change"
    ]
   },
   {
@@ -368,18 +367,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = [99  2  3]\n",
-      "b = [99  2  3]\n"
+      "x: [999  20  30  40  50]\n",
+      "y: [10 30 40]\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
-    "b = np.array(a, copy=False)  # Typically returns a view\n",
-    "b[0] = 99\n",
+    "x = np.array([10, 20, 30, 40, 50])\n",
+    "y = x[[0, 2, 3]]  # Copy: selected elements are gathered into a new array\n",
     "\n",
-    "print('a =', a)\n",
-    "print('b =', b)"
+    "x[0] = 999\n",
+    "print('x:', x)\n",
+    "print('y:', y)  # Unchanged"
    ]
   },
   {
