--- a/AppendixF/NumPy/Broadcasting.ipynb
+++ b/AppendixF/NumPy/Broadcasting.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "043730be-040f-49f1-a693-5f0327e61f57",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "       [112, 213, 314]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
    "source": [
     "A = np.arange(15).reshape(5, 3)\n",
     "B = np.array([100, 200, 300])  # shape: (3,)\n",
-    "A + B  # shape: (5, 3), B is broadcast along the first dimension"
+    "A + B  # shape: (5, 3), B is broadcast along the first axis"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "A = np.ones((2, 3, 4))\n",
     "B = np.array([[10], [20], [30]])  # shape: (3, 1)\n",
-    "A + B  # shape: (2, 3, 4), B is broadcast along the first and last dimensions"
+    "A + B  # shape: (2, 3, 4), B is broadcast along the first and last axes"
    ]
   },
   {
