--- a/AppendixF/NumPy/LinearAlgebra.ipynb
+++ b/AppendixF/NumPy/LinearAlgebra.ipynb
@@ -12,33 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "397843cf-dd40-4448-b2b2-647719ddf249",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 4,  4],\n",
-       "       [10,  8]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([[1, 2], [3, 4]])\n",
-    "B = np.array([[2, 0], [1, 2]])\n",
-    "\n",
-    "A @ B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a98d62f0-f27a-4fea-be41-e8a2c9d80873",
+   "execution_count": 2,
+   "id": "9107b4c1-5a03-4ef1-9966-70ffc6b01835",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +22,7 @@
        "11"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,12 +31,38 @@
     "x = np.array([1, 2])\n",
     "y = np.array([3, 4])\n",
     "\n",
-    "x @ y"
+    "np.dot(x, y)  # or x @ y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "397843cf-dd40-4448-b2b2-647719ddf249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  4],\n",
+       "       [ 4, 10]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2], \n",
+    "              [3, 4]])\n",
+    "B = np.array([[4,  2], \n",
+    "              [-2, 1]])\n",
+    "A @ B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "427b64d8-556c-400d-8b7c-053fb46b8536",
    "metadata": {},
    "outputs": [
@@ -72,7 +73,7 @@
        "       [ 1.5, -0.5]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c5f6f479-f6b7-424a-a8fd-6d6e55e3655b",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "-2.0000000000000004"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "20987399-2c85-4be4-a453-629326ce9d19",
    "metadata": {},
    "outputs": [
