--- a/AppendixF/NumPy/UniversalFunctions.ipynb
+++ b/AppendixF/NumPy/UniversalFunctions.ipynb
@@ -96,21 +96,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.51 ms ± 186 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "327 ms ± 13.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.3 ms ± 157 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "287 ms ± 12.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "n = 10**6\n",
-    "a = np.random.rand(n)\n",
-    "b = np.random.rand(n)\n",
+    "x = np.random.rand(n)\n",
+    "y = np.random.rand(n)\n",
     "\n",
-    "# NumPy ufunc\n",
-    "%timeit a + b\n",
+    "# NumPy ufunc (vectorized)\n",
+    "%timeit x + y\n",
     "\n",
-    "# Pure Python loop\n",
-    "%timeit [a[i] + b[i] for i in range(n)]"
+    "# Python loop\n",
+    "%timeit [x[i] + y[i] for i in range(n)]"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "id": "af82632f-457e-44e8-a2ae-1203bf301fab",
    "metadata": {},
    "source": [
-    "Arithemtic Functions"
+    "Arithmetic Functions"
    ]
   },
   {
@@ -186,26 +186,27 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False]\n",
-      "[ True]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([0.1 + 0.2])\n",
-    "b = np.array([0.3])\n",
+    "a = 0.1 + 0.2\n",
+    "b = 0.3\n",
     "\n",
-    "print(a == b)  # May be False due to floating-point error\n",
-    "print(np.isclose(a, b))  # Correct way to compare"
+    "a == b  # False due to floating-point rounding"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c80b708-82b5-4217-accc-7f7791b9c5fb",
+   "id": "eb508f65-13af-4b99-9157-6b290b60ae91",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
     }
    ],
    "source": [
-    "np.allclose(a, b)"
+    "np.isclose(a, b)  # Preferred for floating-point comparisons"
    ]
   },
   {
@@ -289,7 +290,7 @@
     "print(np.log(x))        # Natural log\n",
     "print(np.sin(x))        # Sine (input in radians)\n",
     "print(np.exp(x))        # Exponential function\n",
-    "print(np.sign(x - 9))   # Sign: -1 if < 0, 0 if 0, 1 if > 0"
+    "print(np.sign(x - 9))   # Sign: -1 if < 0, 0 if = 0, 1 if > 0"
    ]
   },
   {
@@ -316,46 +317,15 @@
     }
    ],
    "source": [
-    "# Logical AND with Boolean arrays\n",
+    "# Logical AND on Boolean arrays\n",
     "a_bool = np.array([True, False, True])\n",
     "b_bool = np.array([False, False, True])\n",
     "print(a_bool & b_bool)\n",
     "\n",
-    "# Bitwise AND with integer arrays\n",
+    "# Bitwise AND on integer arrays\n",
     "a_int = np.array([1, 2, 3])   # binary: 001, 010, 011\n",
     "b_int = np.array([2, 2, 1])   # binary: 010, 010, 001\n",
     "print(a_int & b_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "4a18cb13-ac4b-4c32-9f24-ccca707529ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 2 1]\n",
-      "[3 2 3]\n",
-      "[3 0 2]\n",
-      "[-2 -3 -4]\n",
-      "[2 4 6]\n",
-      "[0 1 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([1, 2, 3])\n",
-    "y = np.array([2, 2, 1])\n",
-    "\n",
-    "print(x & y)          # bitwise AND\n",
-    "print(x | y)          # bitwise OR\n",
-    "print(x ^ y)          # bitwise XOR\n",
-    "print(~x)             # bitwise NOT\n",
-    "print(np.left_shift(x, 1))   # equivalent to x * 2\n",
-    "print(np.right_shift(x, 1))  # equivalent to x // 2"
    ]
   },
   {
@@ -368,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b9c1a424-b44d-4231-9cae-f0dba045d436",
    "metadata": {},
    "outputs": [
@@ -395,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8929e700-afdc-4a9a-b688-870cb64ad5bf",
    "metadata": {},
    "outputs": [
