--- a/AppendixF/NumPy/SelectingElements.ipynb
+++ b/AppendixF/NumPy/SelectingElements.ipynb
@@ -79,8 +79,8 @@
     "A = np.array([[1, 2, 3],\n",
     "              [4, 5, 6],\n",
     "              [7, 8, 9]])\n",
-    "print(A[0, 1])   # Element in first row, second column\n",
-    "print(A[2, -1])  # Element in third row, last column"
+    "print(A[0, 1])   # first row, second column\n",
+    "print(A[2, -1])  # third row, last column"
    ]
   },
   {
@@ -126,7 +126,7 @@
     "    [[1, 2], [3, 4]],\n",
     "    [[5, 6], [7, 8]]\n",
     "])\n",
-    "T[1, 0, 1]  # Element at: second 2D block, first row, second column"
+    "T[1, 0, 1]  # second 2D slice, first row, second column"
    ]
   },
   {
@@ -156,7 +156,7 @@
    ],
    "source": [
     "x = np.array([10, 20, 30, 40, 50])\n",
-    "x[1:4]  # Elements from index 1 to 3"
+    "x[1:4]  # Elements at indices 1, 2, 3"
    ]
   },
   {
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "x[:3]  # Equivalent to x[0:3]"
+    "x[:3]"
    ]
   },
   {
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "x[::2]  # Every second element"
+    "x[::2]"
    ]
   },
   {
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "A[1:3]  # Rows 1 and 2"
+    "A[1:3]"
    ]
   },
   {
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "A[:, 0]  # First column of all rows"
+    "A[:, 0]"
    ]
   },
   {
@@ -554,7 +554,7 @@
     "x = np.array([10, 20, 30, 40, 50])\n",
     "y = x[[0, 2, 4]]  # Returns a copy\n",
     "y[:] = 0          # Modifies y only\n",
-    "print(x)          # Still unchanged"
+    "print(x)          # Unchanged"
    ]
   },
   {
@@ -717,7 +717,7 @@
     "x = np.array([10, 20, 30, 40, 50])\n",
     "y = x[x > 30]  # Returns a copy\n",
     "y[:] = 0       # Modifies y only\n",
-    "print(x)       # Still unchanged"
+    "print(x)       # Unchanged"
    ]
   },
   {
@@ -875,7 +875,7 @@
     "    [1, 2, 3],\n",
     "    [4, 5, 6]\n",
     "])\n",
-    "A[:, 1] = 0  # Set entire second column to 0\n",
+    "A[:, 1] = 0  \n",
     "A"
    ]
   },
@@ -898,36 +898,13 @@
    ],
    "source": [
     "x = np.array([10, 20, 30, 40, 50])\n",
-    "x[x < 30] = 0  # Set elements less than 30 to zero\n",
+    "x[x < 30] = 0  \n",
     "x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7c80bfa4-1837-4cd8-b011-dcc7de0abcc6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 10,  20,  30,  40, 100])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.array([10, 20, 30, 40, 50])\n",
-    "x = np.where(x > 40, 100, x)  # Replace elements > 40 with 100\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
    "id": "39030b40-9d0e-4696-b290-a7d32c037e02",
    "metadata": {},
    "outputs": [
@@ -937,7 +914,7 @@
        "array([ 1, 20,  2, 40,  3])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
